--- a/_layouts/categories.html
+++ b/_layouts/categories.html
@@ -30,7 +30,7 @@ layout: archive
   {% for category in site.categories %}
     {% if category[1].size == i %}
       <section id="{{ category[0] | slugify | downcase }}" class="taxonomy__section">
-        <a href="{{ category[0] }}">
+        <a href="{{ category[0] | slugify }}">
           <h2 class="archive__subtitle">{{ category[0] }}</h2>
         </a>
         <div class="entries-{{ entries_layout }}">
