--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -15,5 +15,8 @@
       {% include nav_list nav=page.sidebar.nav %}
     {% endif %}
   {% endif %}
+  <a href="https://hits.sh/dpdms529.github.io/">
+    <img alt="Hits" src="https://hits.sh/dpdms529.github.io.svg?view=today-total&color=ec1ab9&labelColor=9f9f9f"/>
+  </a>
   </div>
 {% endif %}
