--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -16,6 +16,13 @@
     {% endif %}
   {% endif %}
   <a href="https://hits.sh/dpdms529.github.io/">
+    <style>
+      .hits{
+        width: auto; height: auto;
+        max-width: 99px;
+        max-height: 20px;
+      }
+    </style>
     <img alt="Hits" src="https://hits.sh/dpdms529.github.io.svg?view=today-total&color=ec1ab9&labelColor=9f9f9f"/>
   </a>
   </div>
