--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -17,9 +17,9 @@
   {% endif %}
   <a href="https://hits.sh/dpdms529.github.io/">
     <style>
-      .hits{
+      .Hits{
         width: auto; height: auto;
-        max-width: 20px;
+        max-width: 99px;
         max-height: 20px;
       }
     </style>
