--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -17,13 +17,13 @@
   {% endif %}
   <a href="https://hits.sh/dpdms529.github.io/">
     <style>
-      .Hits{
+      .hits{
         width: auto; height: auto;
         max-width: 99px;
         max-height: 20px;
       }
     </style>
-    <img alt="Hits" src="https://hits.sh/dpdms529.github.io.svg?view=today-total&color=ec1ab9&labelColor=9f9f9f"/>
+    <img class="hits" alt="Hits" src="https://hits.sh/dpdms529.github.io.svg?view=today-total&color=ec1ab9&labelColor=9f9f9f"/>
   </a>
   </div>
 {% endif %}
