--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -15,15 +15,15 @@
       {% include nav_list nav=page.sidebar.nav %}
     {% endif %}
   {% endif %}
-  <a href="https://hits.sh/dpdms529.github.io/">
+  <a href="https://hits.seeyoufarm.com">
     <style>
       .hits{
         width: auto; height: auto;
-        max-width: 99px;
+        max-width: 100px;
         max-height: 20px;
       }
     </style>
-    <img class="hits" alt="Hits" src="https://hits.sh/dpdms529.github.io.svg?view=today-total&color=ec1ab9&labelColor=9f9f9f"/>
+    <img class="hits" src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fdpdms529.github.io&count_bg=%23F9A3F8&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false"/>
   </a>
   </div>
 {% endif %}
