--- a/_includes/tag-list.html
+++ b/_includes/tag-list.html
@@ -1,6 +1,6 @@
 {% case site.tag_archive.type %}
   {% when "liquid" %}
-    {% assign path_type = "#" %}
+    {% assign path_type = "" %}
   {% when "jekyll-archives" %}
     {% assign path_type = nil %}
 {% endcase %}
@@ -12,7 +12,7 @@
     <strong><i class="fas fa-fw fa-tags" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].tags_label | default: "Tags:" }} </strong>
     <span itemprop="keywords">
     {% for tag_word in tags_sorted %}
-      <a href="{{ tag_word | slugify | prepend: path_type | prepend: site.tag_archive.path | relative_url }}" class="page__taxonomy-item p-category" rel="tag">{{ tag_word }}</a>{% unless forloop.last %}<span class="sep">, </span>{% endunless %}
+      <a href="{{ tag_word | slugify | prepend: path_type | prepend: site.url | relative_url }}" class="page__taxonomy-item p-category" rel="tag">{{ tag_word }}</a>{% unless forloop.last %}<span class="sep">, </span>{% endunless %}
     {% endfor %}
     </span>
   </p>
