--- a/_layouts/categories.html
+++ b/_layouts/categories.html
@@ -16,7 +16,7 @@ layout: archive
     {% for category in site.categories %}
       {% if category[1].size == i %}
         <li>
-          <a href="{{ category[0] | slugify }}">
+          <a href="#{{ category[0] | slugify }}">
             <strong>{{ category[0] }}</strong> <span class="taxonomy__count">{{ i }}</span>
           </a>
         </li>
@@ -30,7 +30,7 @@ layout: archive
   {% for category in site.categories %}
     {% if category[1].size == i %}
       <section id="{{ category[0] | slugify | downcase }}" class="taxonomy__section">
-        <a href="{{ category[0] | slugify }}">
+        <a href="{{ category[0] | slugify | prepend: site.url }}">
           <h2 class="archive__subtitle">{{ category[0] }}</h2>
         </a>
         <div class="entries-{{ entries_layout }}">
