--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -16,7 +16,7 @@ layout: archive
     {% for tag in site.tags %}
       {% if tag[1].size == i %}
         <li>
-          <a href="{{ tag[0] | slugify }}">
+          <a href="#{{ tag[0] | slugify }}">
             <strong>{{ tag[0] }}</strong> <span class="taxonomy__count">{{ i }}</span>
           </a>
         </li>
@@ -30,7 +30,7 @@ layout: archive
   {% for tag in site.tags %}
     {% if tag[1].size == i %}
       <section id="{{ tag[0] | slugify | downcase }}" class="taxonomy__section">
-        <a href="{{ tag[0] | slugify }}">
+        <a href="{{ tag[0] | slugify | prepend: site.url }}">
           <h2 class="archive__subtitle">{{ tag[0] }}</h2>
         </a>
         <div class="entries-{{ entries_layout }}">
