--- a/_includes/category-list.html
+++ b/_includes/category-list.html
@@ -5,6 +5,11 @@
     {% assign path_type = nil %}
 {% endcase %}
 
+{% assign algorithm = "솔크뿌,이론" | split:',' %}
+{% assign db = "sqld,친절한sql튜닝" | split:',' %}
+{% assign pl = "java" | split:',' %}
+{% assign spring = "스프링 입문" | split:',' %}
+
 {% if site.category_archive.path %}
   {% assign categories_sorted = page.categories | sort_natural %}
 
@@ -12,6 +17,26 @@
     <strong><i class="fas fa-fw fa-folder-open" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].categories_label | default: "Categories:" }} </strong>
     <span itemprop="keywords">
     {% for category_word in categories_sorted %}
+      {% for sub_category in algorithm "%}
+        {% if sub_category == category_word %}
+          {% assign path_type = "/algorithm/" %}
+        {% endif %}
+      {% endfor %}
+      {% for sub_category in db "%}
+        {% if sub_category == category_word %}
+          {% assign path_type = "/db/" %}
+        {% endif %}
+      {% endfor %}
+      {% for sub_category in pl "%}
+        {% if sub_category == category_word %}
+          {% assign path_type = "/pl/" %}
+        {% endif %}
+      {% endfor %}
+      {% for sub_category in spring "%}
+        {% if sub_category == category_word %}
+          {% assign path_type = "/spring/" %}
+        {% endif %}
+      {% endfor %}
       <a href="{{ category_word | slugify | prepend: path_type | prepend: site.url | relative_url }}" class="page__taxonomy-item p-category" rel="tag">{{ category_word }}</a>{% unless forloop.last %}<span class="sep">, </span>{% endunless %}
     {% endfor %}
     </span>
