--- a/_includes/category-list.html
+++ b/_includes/category-list.html
@@ -6,8 +6,8 @@
 {% endcase %}
 
 {% assign algorithm = "솔크뿌,이론" | split:',' %}
-{% assign db = "sqld,친절한sql튜닝" | split:',' %}
-{% assign pl = "java" | split:',' %}
+{% assign db = "SQLD,친절한SQL튜닝" | split:',' %}
+{% assign pl = "JAVA" | split:',' %}
 {% assign spring = "스프링 입문" | split:',' %}
 
 {% if site.category_archive.path %}
