--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -449,7 +449,8 @@
     margin-left: -0.5em;
     padding-left: 0.5em;
     padding-right: 0.5em;
-    font-weight: bold;
+    // font-weight: bold;
+    color: hotpink;
   }
 
   @include breakpoint(max-width $large - 1px) {
