--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -449,8 +449,7 @@
     margin-left: -0.5em;
     padding-left: 0.5em;
     padding-right: 0.5em;
-    // font-weight: bold;
-    color: hotpink;
+    font-weight: bold;
   }
 
   @include breakpoint(max-width $large - 1px) {
@@ -490,7 +489,7 @@
 }
 
 .nav__sub-title {
-  display: block;
+  // display: block;
   margin: 0.5rem 0;
   padding: 0.25rem 0;
   font-family: $sans-serif-narrow;
