--- a/_includes/category-list.html
+++ b/_includes/category-list.html
@@ -51,7 +51,7 @@
         {% endif %}
       {% endfor %} -->
       <!-- <a href="{{ category_word | slugify | prepend: path_type | prepend: site.url | relative_url }}" class="page__taxonomy-item p-category" rel="tag">{{ category_word }}</a>{% unless forloop.last %}<span class="sep">, </span>{% endunless %} -->
-      <a href="{{ category_url | prepend: path_type | prepend: site.url | relative_url }}" class="page__taxonomy-item p-category" rel="tag">{{ category_word }}</a>{% unless forloop.last %}<span class="sep">, </span>{% endunless %}
+      <a href="{{ category_url | prepend: site.url }}" class="page__taxonomy-item p-category" rel="tag">{{ category_word }}</a>{% unless forloop.last %}<span class="sep">, </span>{% endunless %}
     {% endfor %}
     </span>
   </p>
