--- a/_includes/category-list.html
+++ b/_includes/category-list.html
@@ -6,13 +6,16 @@
 {% endcase %}
 
 {% if site.category_archive.path %}
-  {% assign categories_sorted = page.categories | sort_natural %}
+  <!-- {% assign categories_sorted = page.categories | sort_natural %} -->
 
   <p class="page__taxonomy">
     <strong><i class="fas fa-fw fa-folder-open" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].categories_label | default: "Categories:" }} </strong>
     <span itemprop="keywords">
-    {% for category_word in categories_sorted %}
-      <a href="{{ category_word | slugify | prepend: path_type | prepend: site.category_archive.path | relative_url }}" class="page__taxonomy-item p-category" rel="tag">{{ category_word }}</a>{% unless forloop.last %}<span class="sep">, </span>{% endunless %}
+    {% assign category_url = "/" %}
+    {% for category_word in page.categories %}
+      {% assign category_url = category_url | append: "/" | append: category_word %}
+      <!-- <a href="{{ category_word | slugify | prepend: path_type | prepend: site.category_archive.path | relative_url }}" class="page__taxonomy-item p-category" rel="tag">{{ category_word }}</a>{% unless forloop.last %}<span class="sep">, </span>{% endunless %} -->
+      <a href="{{ category_url | downcase | prepend: site.url }}" class="page__taxonomy-item p-category" rel="tag">{{ category_word }}</a>{% unless forloop.last %}<span class="sep">, </span>{% endunless %}
     {% endfor %}
     </span>
   </p>
