--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,5 +1,5 @@
 <!-- start custom head snippets -->
 
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
-
+<link rel="icon" type="image/png" href="/assets/favicon/favicon.ico"/>
 <!-- end custom head snippets -->
