--- a/_layouts/categories.html
+++ b/_layouts/categories.html
@@ -4,33 +4,32 @@ layout: archive
 
 {{ content }}
 
-{% assign categories_max = 0 %}
-{% for category in site.categories %}
-  {% if category[1].size > categories_max %}
-    {% assign categories_max = category[1].size %}
+{% for category in site.data.navigation.categories %}
+  {% if category.title == page.taxonomy %}
+    {% assign sub_categories = category.children %}
   {% endif %}
 {% endfor %}
 
 <ul class="taxonomy__index">
-  {% for i in (1..categories_max) reversed %}
-    {% for category in site.categories %}
-      {% if category[1].size == i %}
+  {% for category in site.categories %}
+    {% for sub_category in sub_categories %}
+      {% if category[0] == sub_category.title %}
         <li>
           <a href="#{{ category[0] | slugify }}">
-            <strong>{{ category[0] }}</strong> <span class="taxonomy__count">{{ i }}</span>
+            <strong>{{ category[0] }}</strong> <span class="taxonomy__count">{{ category[1].size }}</span>
           </a>
         </li>
       {% endif %}
-    {% endfor %}
+    {% endfor%}
   {% endfor %}
 </ul>
 
 {% assign entries_layout = page.entries_layout | default: 'list' %}
-{% for i in (1..categories_max) reversed %}
-  {% for category in site.categories %}
-    {% if category[1].size == i %}
+{% for category in site.categories %}
+  {% for sub_category in sub_categories %}
+    {% if category[0] == sub_category.title %}
       <section id="{{ category[0] | slugify | downcase }}" class="taxonomy__section">
-        <h2 class="archive__subtitle">{{ category[0] }}</h2>
+        <a href="{{category[0] | slugify }}" style="text-decoration: none;"><h2 class="archive__subtitle">{{ category[0] }}</h2></a>
         <div class="entries-{{ entries_layout }}">
           {% for post in category.last %}
             {% include archive-single.html type=entries_layout %}
@@ -39,5 +38,5 @@ layout: archive
         <a href="#page-title" class="back-to-top">{{ site.data.ui-text[site.locale].back_to_top | default: 'Back to Top' }} &uarr;</a>
       </section>
     {% endif %}
-  {% endfor %}
-{% endfor %}
+  {% endfor  %}
+{% endfor%}
