--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -50,12 +50,12 @@ $type-size-8: 0.625em !default; // ~10px
 // $h-size-4: 1.0625em !default; // ~17px
 // $h-size-5: 1.03125em !default; // ~16.5px
 // $h-size-6: 1em !default; // ~16px
-$h-size-1: 2em !default; // ~25.008px
-$h-size-2: 1.8em !default; // ~20px
-$h-size-3: 1.6em !default; // ~18px
-$h-size-4: 1.4em !default; // ~17px
-$h-size-5: 1.2em !default; // ~16.5px
-$h-size-6: 1em !default; // ~16px
+$h-size-1: 2em !default;
+$h-size-2: 1.8em !default;
+$h-size-3: 1.6em !default;
+$h-size-4: 1.4em !default;
+$h-size-5: 1.2em !default;
+$h-size-6: 1em !default;
 
 /*
    Colors
