--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -14,12 +14,12 @@
 <meta property="og:url" content="https://dpdms529.github.io/">
 <meta property="og:title" content="Joy's Blog">
 <meta property="og:description" content="Joy의 블로그">
-<meta property="og:image" content="">
+<meta property="og:image" content="/assets/images/옴팡이.png">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://dpdms529.github.io/">
 <meta property="twitter:title" content="Joy's Blog">
 <meta property="twitter:description" content="Joy의 블로그">
-<meta property="twitter:image" content="">
+<meta property="twitter:image" content="/assets/images/옴팡이.png">
 <!-- end custom head snippets -->
